# proxy-voter

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  fly.toml  policy-preferences.md  pyproject.toml
cloudflare-worker/: ballot-worker.js  ballot-wrangler.toml  ballot-wrangler.toml.example  email-worker.js  wrangler.toml
example-files/: test-moody.eml
scripts/: send_test_email.py
src/proxy_voter/: api_client.py  config.py  email_parser.py  main.py  models.py  notifier.py  researcher.py  scraper.py  storage.py  voter.py  webhook.py
tests/: conftest.py  test_config.py  test_email_parser.py  test_imports.py  test_main.py  test_models.py  test_notifier.py  test_researcher.py  test_scraper.py  test_storage.py  test_voter.py  test_webhook.py
